--- a/moreOptionsForm.resx
+++ b/moreOptionsForm.resx
@@ -148,7 +148,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;button17.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <data name="button18.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>None</value>
@@ -178,7 +178,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;button18.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>11</value>
   </data>
   <data name="LangFilterCheckBox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -190,10 +190,10 @@
     <value>NoControl</value>
   </data>
   <data name="LangFilterCheckBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>46, 176</value>
+    <value>46, 178</value>
   </data>
   <data name="LangFilterCheckBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 22</value>
+    <value>121, 22</value>
   </data>
   <data name="LangFilterCheckBox.TabIndex" type="System.Int32, mscorlib">
     <value>54</value>
@@ -211,7 +211,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;LangFilterCheckBox.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="FogCheckBox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -223,10 +223,10 @@
     <value>NoControl</value>
   </data>
   <data name="FogCheckBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>46, 116</value>
+    <value>46, 112</value>
   </data>
   <data name="FogCheckBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>96, 22</value>
+    <value>93, 22</value>
   </data>
   <data name="FogCheckBox.TabIndex" type="System.Int32, mscorlib">
     <value>53</value>
@@ -244,7 +244,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;FogCheckBox.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="comboBox1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Calibri, 15px</value>
@@ -310,7 +310,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;comboBox1.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="labelResolution.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -340,7 +340,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelResolution.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="resOkButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -435,7 +435,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;resOkButton.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <metadata name="toolTip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -447,10 +447,10 @@
     <value>Calibri, 15px, style=Bold</value>
   </data>
   <data name="HeatEffectsCheckBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>46, 146</value>
+    <value>46, 134</value>
   </data>
   <data name="HeatEffectsCheckBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 22</value>
+    <value>100, 22</value>
   </data>
   <data name="HeatEffectsCheckBox.TabIndex" type="System.Int32, mscorlib">
     <value>59</value>
@@ -468,7 +468,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;HeatEffectsCheckBox.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="camOkButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -563,7 +563,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;camOkButton.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="camTrackBar.Location" type="System.Drawing.Point, System.Drawing">
     <value>46, 240</value>
@@ -584,7 +584,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;camTrackBar.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="camHeightLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -617,6 +617,39 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;camHeightLabel.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="WaterEffectsCheckBox.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="WaterEffectsCheckBox.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Calibri, 15px, style=Bold</value>
+  </data>
+  <data name="WaterEffectsCheckBox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="WaterEffectsCheckBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>46, 156</value>
+  </data>
+  <data name="WaterEffectsCheckBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>109, 22</value>
+  </data>
+  <data name="WaterEffectsCheckBox.TabIndex" type="System.Int32, mscorlib">
+    <value>64</value>
+  </data>
+  <data name="WaterEffectsCheckBox.Text" xml:space="preserve">
+    <value>Water Effects</value>
+  </data>
+  <data name="&gt;&gt;WaterEffectsCheckBox.Name" xml:space="preserve">
+    <value>WaterEffectsCheckBox</value>
+  </data>
+  <data name="&gt;&gt;WaterEffectsCheckBox.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;WaterEffectsCheckBox.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;WaterEffectsCheckBox.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
